@@ -1,3 +1,11 @@
+2004-08-16  Jakub Jelinek  <jakub@redhat.com>
+
+	* configure.ac (HAVE_LD_OVERLAPPING_OPD): New test.
+	* configure: Rebuilt.
+	* config.in: Rebuilt.
+	* config/rs6000/rs6000.c (OVERLAPPING_OPD): Define.
+	(rs6000_elf_declare_function_name): Use it.
+
 2004-08-21  Alan Modra  <amodra@bigpond.net.au>
 
 	* config/rs6000/linux64.h (DOT_SYMBOLS): Define.
